CSS: Prevent home-page tabs from "jumping" when active.

--- a/app/assets/stylesheets/home.sass
+++ b/app/assets/stylesheets/home.sass
@@ -156,7 +156,6 @@
       li.active a
         background: #fff
         margin: 0
-        padding: 4px 10px 4px 15px
 
   #movie_content
     margin: -2px auto 0 auto
